# nbody-gpu

./: CMakeLists.txt  README.md  main.cpp  particle.h  render.cpp  render.h  shader.fragment  shader.vertex
